# F1-ReinforcementLearning

./: .gitignore  AGENTS.md  Documentation.md  Implement.md  Plan.md  Prompt.md  README.md  pyproject.toml  race.py  ray_rollout.py  ray_training.py  render_agents.py  track.py  use_agent.py
archive/legacy-20260424/: Documentation.md  Implement.md  Plan.md  Prompt.md  README.md  car.py  manual_mode.py  pyproject.toml  race.py  ray_rollout.py  render_agents.py  tmp_cleanup.py  utils.py
archive/legacy-20260424/src/f1rl/: __init__.py  artifacts.py  benchmark.py  campaign.py  config.py  controllers.py  dynamics.py  env.py  eval.py  gpu_renderer.py  hardware.py  imitation.py  inference.py  legacy.py  manual.py  optimize.py  ray_compat.py  renderer.py  rllib_utils.py  rollout.py  stages.py  swarm.py  torch_agent.py  torch_ppo.py  torch_runtime.py  track.py  train.py  validate.py
archive/legacy-20260424/tests/: test_benchmark.py  test_campaign.py  test_checkpoint_roundtrip.py  test_cli_smoke.py  test_env_api.py  test_env_reset.py  test_geometry.py  test_imitation.py  test_imports.py  test_spawn_heading.py  test_stages.py  test_torch_runtime.py
assets/reference/: monza_2024_Q_VER_summary.json  monza_2024_Q_VER_telemetry.csv
assets/tracks/monza/: track_manifest.json  track_spec.npz
src/f1rl/: __init__.py  artifacts.py  benchmark.py  calibration.py  clean_artifacts.py  config.py  constants.py  controllers.py  dynamics.py  env.py  eval.py  geometry.py  hardware.py  hardware_check.py  inference.py  logging_utils.py  manual.py  physics.py  policy_io.py  reference_agent.py  render.py  renderer.py  replay.py  rllib_utils.py  rollout.py  scripted.py  sim.py  telemetry.py  track.py  track_build.py  track_model.py  train.py  validate.py
tests/: test_benchmark.py  test_calibration.py  test_checkpoint_roundtrip.py  test_clean_artifacts.py  test_cli_smoke.py  test_controllers.py  test_dynamics.py  test_env.py  test_geometry.py  test_physics.py  test_policy_train_smoke.py  test_reference_agent.py  test_render_config.py  test_reward_logic.py  test_scripted_replay.py  test_sim.py  test_telemetry.py  test_track_build.py
