[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "f1-reinforcement-learning"
version = "0.2.0"
description = "Simplified top-down 2D Monza driving simulator with Pygame, Gymnasium, and PPO."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "gymnasium>=1.2.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0.84",
  "pillow>=10.4.0",
  "pygame>=2.6.0",
]

[project.optional-dependencies]
train = [
  "stable-baselines3>=2.7.0",
  "tensorboard>=2.20.0",
  "torch>=2.10.0,<2.11.0",
]
dev = [
  "pyright>=1.1.405",
  "pytest>=8.3.0",
  "pytest-timeout>=2.3.1",
  "ruff>=0.6.9",
]

[project.scripts]
f1-build-track = "f1rl.track_build:main"
f1-manual = "f1rl.manual:main"
f1-scripted = "f1rl.scripted:main"
f1-train = "f1rl.train:main"
f1-eval = "f1rl.eval:main"
f1-replay = "f1rl.replay:main"
f1-hardware-check = "f1rl.hardware:main"
f1-calibration = "f1rl.calibration:main"
f1-reference-agent = "f1rl.reference_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/f1rl"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
timeout = 120

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["archive", ".venv", ".pytest_cache", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src/f1rl"]
exclude = ["archive", ".venv"]
typeCheckingMode = "basic"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "platform_system == 'Windows'" },
]
