[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "f1-reinforcement-learning"
version = "0.1.0"
description = "Top-down 2D F1-style driving simulator with Gymnasium and RLlib workflows."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "gymnasium>=1.0.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0.84",
  "pillow>=10.4.0",
  "pygame>=2.6.0",
]

[project.optional-dependencies]
train = [
  "gputil>=1.4.0",
  "torch>=2.10.0,<2.11.0",
]
viz = [
  "imageio>=2.36.0",
  "moderngl>=5.12.0",
  "pyglet>=2.1.0",
]
dev = [
  "pyright>=1.1.405",
  "pytest>=8.3.0",
  "pytest-timeout>=2.3.1",
  "ruff>=0.6.9",
]

[project.scripts]
f1-manual = "f1rl.manual:main"
f1-rollout = "f1rl.rollout:main"
f1-train = "f1rl.train:main"
f1-eval = "f1rl.eval:main"
f1-benchmark = "f1rl.benchmark:main"
f1-optimize = "f1rl.optimize:main"
f1-swarm = "f1rl.swarm:main"
f1-campaign = "f1rl.campaign:main"
f1-imitation = "f1rl.imitation:main"
f1-validate = "f1rl.validate:main"
f1-clean-artifacts = "f1rl.clean_artifacts:main"
f1-hardware-check = "f1rl.hardware_check:main"

[tool.hatch.build.targets.wheel]
packages = ["src/f1rl"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
timeout = 120

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src/f1rl"]
typeCheckingMode = "basic"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "platform_system == 'Windows'" },
]
